12862
```scala
scala> rm -rf ~/tmp/* ; scaladoc -d ~/tmp test.scala
test.scala:24: error: expected start of definition
abstract clas Foo_protected {
         ^
Exception in thread "main" java.lang.ClassCastException: scala.tools.nsc.symtab.Symbols$$NoSymbol$$
        at scala.tools.nsc.doc.DocDriver.f$$0(DocDriver.scala:47)
        at scala.tools.nsc.doc.DocDriver$$$$anonfun$$3.apply(DocDriver.scala:57)
        at scala.tools.nsc.doc.DocDriver$$$$anonfun$$3.apply(DocDriver.scala:57)
        at scala.Iterator$$class.foreach(Iterator.scala:375)
        at scala.collection.mutable.ListBuffer$$$$anon$$0.foreach(ListBuffer.scala:255)
        at scala.tools.nsc.doc.DocDriver.process(DocDriver.scala:57)
        at scala.tools.nsc.Main$$.process(Main.scala:92)
        at scala.tools.nsc.Main$$.main(Main.scala:107)
        at scala.tools.nsc.Main.main(Main.scala)
```
